fixed padding issue on mobile

--- a/css/menu.css
+++ b/css/menu.css
@@ -136,6 +136,10 @@
             transform: translate(0, 0%);
 }
 
+.menu > ul {
+    padding-left: 0px;
+}
+
 .menu > ul > li {
     list-style: none;
     color: white;
